--- a/source/statics/lmbtfy/index.html
+++ b/source/statics/lmbtfy/index.html
@@ -21,14 +21,14 @@
         <div class="link" style="display: none" id="link">
             <input type="text" readonly id="lmbtfyLink" class="copyable">
             <div>
-                <a class="link_button" href="#" id="copy" data-clipboard-target="lmbtfyLink">复制</a>
+                <a class="link_button" href="#" id="copy" data-clipboard-target="#lmbtfyLink">复制</a>
                 <a class="link_button" href="#" id="go">预览</a>
             </div>
         </div>
     </div>
 
 </body>
-<script src="//cdn.bootcss.com/zeroclipboard/2.1.6/ZeroClipboard.min.js"></script>
+<script src="//cdn.bootcss.com/clipboard.js/1.7.1/clipboard.min.js"></script>
 <script src="//cdn.bootcss.com/jquery/2.1.1/jquery.min.js"></script>
 <script src="./js/lmbtfy.js"></script>
 </html>
